--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,5 +1,4 @@
 /* Slider */
-
 .slideshow {
   visibility: hidden;
 
@@ -9,7 +8,6 @@
 }
 
 .slick-slider {
-  height: 320px;
   @media (min-width: @screen-sm) {
     height: 289px;
   }
@@ -130,9 +128,8 @@
   .slick-slide img {
     min-height: 100%;
     max-width: none;
-    top: 50%;
+    top: 0;
     left: 0;
-    transform: translateY(-50%) translate3d(0px, 0px, 0px);
     -ms-interpolation-mode: bicubic;
   }
 }
@@ -140,19 +137,8 @@
   /* IE Edge */
   .slick-slide img {
     max-width: none;
-    top: 50%;
+    top: 0;
     left: 0;
-    transform: translateY(-50%) translate3d(0px, 0px, 0px);
-  }
-}
-@media all and (min-width: @screen-sm), (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .slick-slide img {
-    position: absolute;
-  }
-}
-@supports (min-width: @screen-sm), (-ms-ime-align: auto) {
-  .slick-slide img {
-    position: absolute;
   }
 }
 
@@ -345,8 +331,8 @@
       color: @text-color;
       background: @white-color;
       @media (min-width: @screen-sm) {
-        background: rgba(@white-color, .8);
-      }
+      background: rgba(@white-color, .8);
+    }
 
       h2 {
         margin-top: 0;
