--- a/less/navbar.less
+++ b/less/navbar.less
@@ -858,6 +858,8 @@
 .ku-nav {
   .btn-global-search {
     .btn {
+      font-weight: 400;
+      text-transform: capitalize;
       color: @gray-444;
       background-color: @white-color;
 
