--- a/docs/_includes/components/glyphicons.html
+++ b/docs/_includes/components/glyphicons.html
@@ -191,3 +191,17 @@
   </li>
 </ul>
 {% endhighlight %}
+<h2 id="share">Share content on social media</h2>
+<p>Use the <code>onclick="shareURL(this)"</code> function and the <code>href</code> values like in the example below.
+<ul>
+  <li><a onclick="shareURL(this)" href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a></li>
+  <li><a onclick="shareURL(this)" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=">Share on LinkedIn</a></li>
+  <li><a onclick="shareURL(this)" href="https://twitter.com/home?status=">Share on Twitter</a></li>
+</ul>
+{% highlight html %}
+<ul>
+  <li><a onclick="shareURL(this)" href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a></li>
+  <li><a onclick="shareURL(this)" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=">Share on LinkedIn</a></li>
+  <li><a onclick="shareURL(this)" href="https://twitter.com/home?status=">Share on Twitter</a></li>
+</ul>
+{% endhighlight %}
