--- a/docs/_includes/components/glyphicons.html
+++ b/docs/_includes/components/glyphicons.html
@@ -194,9 +194,9 @@
 <h2 id="share">Share content on social media</h2>
 <p>Use the <code>onclick="shareURL()"</code> function and the <code>data-share</code> attribute hold the link to each media like in the example below.
 <ul>
-  <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.facebook.com/sharer/sharer.php?u=" href="#" target="_blank">Share on Facebook</a></li>
-  <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.linkedin.com/shareArticle?mini=true&amp;url=" href="#" target="_blank">Share on LinkedIn</a></li>
-  <li><a onclick="shareURL($(this).data('share'))" data-share="https://twitter.com/home?status=" href="#" target="_blank">Share on Twitter</a></li>
+  <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.facebook.com/sharer/sharer.php?u=" href="#">Share on Facebook</a></li>
+  <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.linkedin.com/shareArticle?mini=true&amp;url=" href="#">Share on LinkedIn</a></li>
+  <li><a onclick="shareURL($(this).data('share'))" data-share="https://twitter.com/home?status=" href="#">Share on Twitter</a></li>
 </ul>
 {% highlight html %}
 <ul>
