--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -1,5 +1,5 @@
 /* Publikationslister - CURIS/Pure  */
-.publikationsliste .nav {
+.nav {
   background: none;
   border: 0;
   font-family: inherit;
@@ -12,17 +12,17 @@ head:first-child+body .nav {
   background-position: unset;
 }
 
-.publikationsliste .nav li {
+.nav li {
   padding-bottom: unset;
   text-align: unset;
 }
 
-.publikationsliste .nav a {
+.nav a {
   font-size: inherit;
   font-weight: inherit;
 }
 
-.publikationsliste .dropdown {
+.dropdown {
   background: none;
   left: unset;
   position: relative;
@@ -31,7 +31,7 @@ head:first-child+body .nav {
   width: unset;
 }
 
-.publikationsliste #content {
+#content {
   border-top: none;
   width: initial;
   float: none;
@@ -57,7 +57,7 @@ ol.portal_list li p.type {
   line-height: 18px;
 }
 
-.publikationsliste .label {
+.label {
   color: inherit;
   font-size: 12px;
   font-weight: 400;
@@ -149,7 +149,7 @@ div.rendering p.type, ol.portal_list>li {
 }
 
 .quick_nav {
-  margin: 0 0 15px 0!important;
+  margin: 0 0 15px 0 !important;
 }
 
 .quick_nav, .portal_navigator_result {
@@ -163,13 +163,14 @@ div.rendering p.type, ol.portal_list>li {
 }
 
 table.properties>tbody>tr:hover {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 .organisations-relations table.properties td {
   padding-bottom: 8px;
   background-color: transparent;
 }
+
 .organisations-relations table.properties tr>td:nth-child(1),
 .organisations-relations table.properties tr>td:nth-child(2) {
   padding-right: 5px;
