--- a/less/navbar.less
+++ b/less/navbar.less
@@ -670,12 +670,12 @@
       }
       // KU language switcher icons
       &.dansk,
-      &.engelsk {
+      &.english {
         display: inline-block;
         background-repeat: no-repeat;
       }
 
-      &.engelsk {
+      &.english {
         width: 75px;
         background-image: url("https://bootstrap.secure.ku.dk/img/flag-uk.gif");
         background-position: right 8px;
