--- a/docs/assets/css/doctypes/gridforside.css
+++ b/docs/assets/css/doctypes/gridforside.css
@@ -1,4 +1,5 @@
 @media (min-width: 480px) and (max-width: 757px) {
+
   /* Double columns (.col-sm-6) must span 100% in tablet view (but not the full-width template - hence this hack.) */
   .GridForside .double-column [class^="col-"][class$="-6"] {
     width: 100%;
@@ -12,4 +13,15 @@
 .h1,
 h1 {
   margin-top: 20px;
+}
+
+@media (min-width: 992px) {
+  /* Flexible box tweaks*/
+  .GridForside .double-column .gridbox.size1 {
+    height: 335px;
+  }
+
+  .GridForside .double-column .gridbox.size1 .text {
+    display: block;
+  }
 }
