--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -403,7 +403,7 @@
       .box1 {
         order: 2;
         padding: 5px 10px 10px;
-        flex: 1;
+        flex: 1 1 auto;
 
         .header-small {
           font-weight: bold;
