--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -122,7 +122,7 @@
   <script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script>
   {% endif %}
   {% if page.slug == "examples" %}
-  <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+  <!-- <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script> -->
   <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
   {% endif %}
 <script src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
