--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -109,6 +109,8 @@
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
+<!-- Automatically create anchors for documentation - not for production -->
+<script src="{{ site.baseurl }}/assets/js/vendor/anchor.min.js"></script>
 {% else %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
 {% if page.slug != "examples" %}
