--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -73,6 +73,8 @@
   <script src="{{ site.baseurl }}/dist/js/multiple-select.min.js"></script>
   <script src="{{ site.baseurl }}/dist/js/datatables.min.js"></script>
   {% endif %}
+  <!-- Automatically create anchors for documentation - not for production -->
+  <script src="{{ site.baseurl }}/assets/js/vendor/anchor.min.js"></script>
 {% else %}
 <!--[if lt IE 9]>
 <script src="{{ site.baseurl }}/assets/js/ie8-responsive-file-warning.js"></script>
