--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -25,7 +25,7 @@
     }
 
     .list-content {
-      flex: 1;
+      flex: 1 1 auto;
       order: 2;
       padding: 15px;
       line-height: @line-height-small;
@@ -41,10 +41,16 @@
       text-decoration: none;
       display: flex;
       flex-direction: column;
-      flex: 1;
+      flex: 1 1 auto;
 
       &:hover {
-        background-color: #e7e6e6;
+        background-color: darken(@gray-f5, 6%);
+        .list-img {
+          .image-fadeOut();
+        }
+      }
+      &:active {
+        background-color: darken(@gray-f5, 6%);
       }
     }
 
