--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -158,8 +158,7 @@
   }
 
   input[type="checkbox"] {
-    position: absolute;
-    left: -9999px;
+    display: none;
 
     &+label::after {
       font-size: 10px;
