--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -142,6 +142,7 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%) translate3d(0px, 0px, 0px);
     backface-visibility: hidden;
+    -ms-interpolation-mode: bicubic;
 }
 .img-fix-for-ie-size2() {
   height: 100%;
