--- a/less/mixins/ku-content-elements.less
+++ b/less/mixins/ku-content-elements.less
@@ -25,3 +25,19 @@
 .image-fadeIn() {
   filter: brightness(100%) blur(0);
 }
+
+.img-fix-for-ie() {
+  // IE doesn't understand flex and object-cover, so we have to give special treatment...  #?$¤!%...
+  min-height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%) translate3d(0px, 0px, 0px);
+  backface-visibility: hidden;
+  -ms-interpolation-mode: bicubic;
+}
+
+.img-fix-for-ie-size2() {
+  height: 100%;
+  max-width: none;
+}
