--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -91,7 +91,9 @@
 
   img {
     @media (min-width: @screen-sm) {
-      min-height: 100%;
+      //min-height: 100%;
+      height: 100%!important;
+      max-width: none!important;
     }
     display: block;
     flex: none;
