Cleaning up mixins

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -401,6 +401,7 @@
           transform: translateY(-50%);
           width: 50%;
           min-height: 70%;
+          .border-right-radius(2px);
         }
 
         &.textlabel-50-right {
@@ -411,6 +412,7 @@
           transform: translateY(-50%);
           width: 50%;
           min-height: 70%;
+          .border-left-radius(2px);
         }
       }
     }
