--- a/less/mixins/ku-links.less
+++ b/less/mixins/ku-links.less
@@ -1,5 +1,5 @@
 // Easy links definition for all links states
-// Usage: .states(commom styling for all states) 'text-decoration: underline' or 'text-decoration: none', etc... Can be expanded to more styling.
+// Usage: .states(common styling for all states) 'text-decoration: underline' or 'text-decoration: none', etc... Can be expanded to more styling.
 
 .states(@text-decoration) {
   &:focus,
