--- a/less/mixins/opacity.less
+++ b/less/mixins/opacity.less
@@ -3,7 +3,7 @@
 .opacity(@opacity) {
   opacity: @opacity;
   // IE8 filter
-  @opacity-ie: (@opacity * 100);
-  filter: ~"alpha(opacity=@{opacity-ie})";
-  zoom: 1;
+  //@opacity-ie: (@opacity * 100);
+  //filter: ~"alpha(opacity=@{opacity-ie})";
+  //zoom: 1;
 }
