--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -187,7 +187,9 @@ h2 code, h3 code, h4 code {
   background-color: #eee;
   border-color: #ddd;
 }
-
+.docs-forbidden-icon {
+  font-size: 32px;
+}
 /*
  * Footer
  *
