--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -4,6 +4,7 @@
     <li><a href="#glyphicons-glyphs">Available glyphs</a></li>
     <li><a href="#glyphicons-how-to-use">How to use</a></li>
     <li><a href="#glyphicons-examples">Examples</a></li>
+    <li><a href="#ku-icon-examples">KU custom icons</a></li>
   </ul>
 </li>
 <li>
