--- a/docs/_includes/components/glyphicons.html
+++ b/docs/_includes/components/glyphicons.html
@@ -126,6 +126,12 @@
       <span class="icon icon-arrow-back" aria-hidden="true"></span>
     </li>
     <li>
+      <span class="icon icon-desktop" aria-hidden="true"></span>
+    </li>
+    <li>
+      <span class="icon icon-exclamation" aria-hidden="true"></span>
+    </li>
+    <li>
       <span class="icon icon-quote" aria-hidden="true"></span>
     </li>
     <li>
@@ -184,6 +190,9 @@
   </li>
   <li>
     <span class="icon icon-arrow-back" aria-hidden="true"></span>
+  </li>
+  <li>
+    <span class="icon icon-exclamation" aria-hidden="true"></span>
   </li>
   <li>
     <span class="icon icon-quote" aria-hidden="true"></span>
