--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -97,12 +97,13 @@
       </ul>
       <form class="navbar-form navbar-right search_form search_reset global-search" role="search">
         <div class="input-group input-group-sm">
-          <input class="form-control global-search-query" type="search" placeholder="Søg..." aria-label="Inputfelt til søgeord">
+          <label for="globalSearch" class="sr-only">Søg</label>
+          <input id="globalSearch" class="form-control global-search-query" type="search" placeholder="Søg..." aria-label="Inputfelt til søgeord">
           <div class="input-group-btn btn-global-search">
             <button type="button" class="btn btn-default dropdown-toggle global-search-options-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="sr-only">Vis søgemuligheder</span></button>
             <ul class="dropdown-menu dropdown-menu-right global-search-options-filter">
             </ul>
-            <button class="btn btn-default global-search-submit" name="sa" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            <button class="btn btn-default global-search-submit" name="sa" type="submit"><span class="glyphicon glyphicon-search"></span></button>
           </div>
         </div>
       </form>
