--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -12,13 +12,13 @@
     <nav class="jumpbox" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
       <ul class="jump">
         <li>
-          <a href="#kunav" title="Spring til sidens menu" accesskey="1" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-menu-hamburger"></i><span> Emnenavigation</span></a>
+          <a href="#kunav" title="Spring til sidens menu" accesskey="1" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-menu-hamburger"></span><span> Emnenavigation</span></a>
         </li>
         <li>
-          <a href="#main-area" title="Spring til Indhold på Siden" accesskey="2" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-list"></i><span> Indhold</span></a>
+          <a href="#main-area" title="Spring til Indhold på Siden" accesskey="2" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-list"></span><span> Indhold</span></a>
         </li>
         <li>
-          <a href="#globalfooter" title="Spring til footerlinks" accesskey="3" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-list"></i><span> Footerlinks</span></a>
+          <a href="#globalfooter" title="Spring til footerlinks" accesskey="3" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-list"></span><span> Footerlinks</span></a>
         </li>
       </ul>
     </nav>
