--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -110,6 +110,8 @@
 
   .mm-navbar__title {
     text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: @ku-red;
     color: @white-color;
     font-size: larger;
