--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -1,9 +1,7 @@
 //
 // CSS for legacy CMS elements - delete when not necessary.
 // --------------------------------------------------
-
 // Gamle nyhedsbokse
-
 .gcitem {
   &.nyhed {
     .nyhed-illustration {
@@ -28,8 +26,17 @@
     }
   }
 }
-
 // Banner doctype
+
 #banners-3col {
   padding: 0;
+}
+
+
+// Old advanced lists
+ul {
+  &.stripped {
+    list-style-type: none;
+    padding-left: 0;
+  }
 }
