--- a/less/ku-login.less
+++ b/less/ku-login.less
@@ -3,8 +3,7 @@
 .login-container {
   max-width: 450px;
   height: 100%;
-  margin: 0 auto;
-  margin-top: 10px;
+  margin: 10px auto 0;
   @media (min-width: @screen-sm) {
     margin-top: 50px;
   }
