--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -175,3 +175,7 @@ table.properties>tbody>tr:hover {
 .organisations-relations table.properties tr>td:nth-child(2) {
   padding-right: 5px;
 }
+
+.striped-list li {
+  padding: 5px;
+}
