--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -424,7 +424,7 @@
           line-height: 1.3em;
           text-transform: none;
           padding: 0;
-          margin: 15px 0 5px;
+          margin: 10px 0 5px;
         }
 
         .text {
@@ -801,9 +801,9 @@
 
       &.size1 {
         &.with-img {
-          .text {
-            display: none;
-          }
+          // .text {
+          //   display: none;
+          // }
 
           .box2 {
             img {
