--- a/less/tables.less
+++ b/less/tables.less
@@ -190,6 +190,19 @@ th {
   }
 }
 
+// KU specific
+.table-noborder {
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td {
+        pborder: 0;
+      }
+    }
+  }
+}
 
 // Table cell sizing
 //
