--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -356,7 +356,7 @@ nav {
   width: 25px;
   animation: ku-loading 0.6s infinite linear;
   overflow: auto;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
 }
